pin to v1.30.0 in buf.gen.yaml, too

--- a/internal/proto/buf.gen.yaml
+++ b/internal/proto/buf.gen.yaml
@@ -6,6 +6,6 @@ managed:
     override:
       buf.build/bufbuild/reflect: buf.build/gen/go/bufbuild/reflect/protocolbuffers/go
 plugins:
-  - plugin: buf.build/protocolbuffers/go
+  - plugin: buf.build/protocolbuffers/go:v1.30.0
     out: gen
     opt: paths=source_relative
