--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.21.x, 1.22.x, 1.23.x]
+        go-version:
+        - name: latest
+          version: 1.24.x
+        - name: previous
+          version: 1.23.x
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -16,7 +20,7 @@ jobs:
       - name: setup-go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: ${{ matrix.go-version.version }}
       - name: setup-buf
         uses: bufbuild/buf-setup-action@v1
       - name: cache
@@ -32,5 +36,5 @@ jobs:
           BUF_TOKEN: ${{ secrets.BUF_TOKEN }}
         run: make test
       - name: lint
-        if: matrix.go-version == '1.23.x'
+        if: matrix.go-version.name == 'latest'
         run: make lint
